--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-logger": "^3.2.1",
     "koa-mysql-session": "0.0.2",
     "koa-router": "^8.0.8",
     "koa-session-minimal": "^4.0.0",
