--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
@@ -19,7 +20,9 @@
     "koa-session-minimal": "^4.0.0",
     "koa-static-cache": "^5.1.3",
     "md5": "^2.2.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
