--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "koa-router": "^8.0.8",
     "koa-session-minimal": "^4.0.0",
     "koa-static-cache": "^5.1.3",
+    "koa2-swagger-ui": "^4.0.0",
     "md5": "^2.2.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.3.0"
+    "sequelize": "^6.3.0",
+    "swagger-jsdoc": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
