--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "ali-oss": "^6.10.0",
+    "axios": "^0.19.2",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-mysql-session": "0.0.2",
+    "koa-request": "^1.0.0",
     "koa-router": "^8.0.8",
     "koa-session-minimal": "^4.0.0",
     "koa-static-cache": "^5.1.3",
@@ -24,8 +26,10 @@
     "md5": "^2.2.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "request": "^2.88.2",
     "sequelize": "^6.3.0",
-    "swagger-jsdoc": "^4.0.0"
+    "swagger-jsdoc": "^4.0.0",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
