--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ali-oss": "^6.10.0",
     "axios": "^0.19.2",
+    "co": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
@@ -24,6 +25,7 @@
     "koa-static-cache": "^5.1.3",
     "koa2-swagger-ui": "^4.0.0",
     "md5": "^2.2.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "request": "^2.88.2",
