--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-jwt": "^4.0.0",
     "koa-logger": "^3.2.1",
     "koa-mysql-session": "0.0.2",
     "koa-request": "^1.0.0",
