--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ali-oss": "^6.10.0",
     "axios": "^0.19.2",
     "co": "^4.6.0",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-jwt": "^4.0.0",
     "koa-logger": "^3.2.1",
