--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "co": "^4.6.0",
     "formidable": "^1.2.2",
+    "husky": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-body": "^4.2.0",
@@ -39,6 +40,8 @@
     "xss": "^1.0.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "lint-staged": "^10.4.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.2"
   }
 }
